# fast_api_project_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  api_models.py  api_router.py  compose.yaml  crud.py  db.py  db_models.py  pyproject.toml  requirements.txt  run.py
.github/workflows/: codeql.yml  python-app.yml
db/: crud.py  db_models.py
tests/: conftest.py  test_db.py  test_routes.py
v0/: events.py  main.py  persons.py
