[project]
name = "fast-api-event-system"
version = "0.0.1alpha"
requires-python = ">=3.10"
authors = [
    {name = "Christopher Roberts"}
]
description = "Test project for fast api learning"

[tool.coverage.run]
omit = [
    "tests/*",
    "run.py",
    "db.py",
]

[tool.coverage.report]
exclude_also = [
    'if __name__ == "__main__":'
]
